--- a/frontend/index.css
+++ b/frontend/index.css
@@ -23,5 +23,21 @@ a {
 }
 
 .bg-muted {
+  background: #f2f2f2 !important;
+}
+
+.text-black-bold {
+  color: #161616 !important;
+  font-weight: 700;
+}
+
+.card--author {
+  display: flex;
+  padding: 20px;
+  width: 100%;
   background: #f2f2f2;
+}
+
+.card__image {
+  margin-right: 10px;
 }
